@@ -229,6 +229,9 @@ libc {
     ulabs;
     ullabs;
   }
+  GLIBC_2.43 {
+    memalignment;
+  }
   GLIBC_PRIVATE {
     # functions which have an additional interface since they are
     # are cancelable.
